--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     // JSON simple for MuukReport
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1' 
 
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+
 }
 
 webdriverBinaries {
