--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.14.0'
 
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+
 }
 
 webdriverBinaries {
