--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ ext {
         groovyVersion = '2.4.12'
         gebVersion = '2.2'
         seleniumVersion = '3.6.0'
-        chromeDriverVersion = '97.0.4692.71'
+        // chromeDriverVersion = '114.0.5735.16'
         geckoDriverVersion = '0.23.0'
     }
 }
@@ -48,7 +48,7 @@ dependencies {
 }
 
 webdriverBinaries {
-    chromedriver chromeDriverVersion
+    // chromedriver chromeDriverVersion
     geckodriver geckoDriverVersion
 }
 
