--- a/appspec.yml
+++ b/appspec.yml
@@ -57,18 +57,18 @@ hooks:
       runas: root
 # During the AfterInstall deployment lifecycle event, run the commands 
 #   in the script specified in "location".
-  AfterInstall:
-    - location: deploy_scripts/config_files
-      timeout: 300
-      runas: root
-    - location: deploy_scripts/start_services
-      timeout: 300
-      runas: root
+  # AfterInstall:
+    # - location: deploy_scripts/config_files
+    #   timeout: 300
+    #   runas: root
+    # - location: deploy_scripts/start_services
+    #   timeout: 300
+    #   runas: root
 # During the ApplicationStop deployment lifecycle event, run the commands 
 #   in the script specified in "location" starting from the root of the 
 #   revision's file bundle.
-  ApplicationStop:
-    - location: deploy_scripts/stop_services
-      timeout: 300
-      runas: root
+  # ApplicationStop:
+  #   - location: deploy_scripts/stop_services
+  #     timeout: 300
+  #     runas: root
 
