Be route in config.json

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ ext {
         groovyVersion = '2.4.12'
         gebVersion = '2.2'
         seleniumVersion = '3.6.0'
-        chromeDriverVersion = '114.0.5735.198'
-        geckoDriverVersion = '0.28.0'
+        chromeDriverVersion = '114.0.5735.90'
+        geckoDriverVersion = '0.23.0'
     }
 }
 
@@ -48,7 +48,7 @@ dependencies {
 }
 
 webdriverBinaries {
-    // chromedriver chromeDriverVersion
+    chromedriver chromeDriverVersion
     geckodriver geckoDriverVersion
 }
 
