--- a/appspec.yml
+++ b/appspec.yml
@@ -61,9 +61,9 @@ hooks:
     - location: deploy_scripts/config_files
       timeout: 300
       runas: root
-    # - location: deploy_scripts/start_services
-    #   timeout: 300
-    #   runas: root
+    - location: deploy_scripts/start_services
+      timeout: 300
+      runas: root
 # During the ApplicationStop deployment lifecycle event, run the commands 
 #   in the script specified in "location" starting from the root of the 
 #   revision's file bundle.
